# bewusstsein

rust/: Cargo.toml
rust/src/: lib.rs
