[package]
name    = "bewusstsein"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[features]
const-expr-bounds = ["dep:const-expr-bounds"]
memory            = ["dep:memory"]
linear-algebra    = ["dep:linear-algebra"]
geometric-algebra = ["dep:geometric-algebra"]
calculus          = ["dep:calculus"]
probability       = ["dep:probability"]
kinematics        = ["dep:kinematics"]
kinetics          = ["dep:kinetics"]
dynamics          = ["dep:dynamics"]
graphs            = ["dep:graphs"]
neural-networks   = ["dep:neural-networks"]
control           = ["dep:control"]
robotics          = ["dep:robotics"]

[dependencies]
const-expr-bounds = { version = "0.1.0", optional = true, path = "../../const-expr-bounds/rust" }
memory            = { version = "0.1.0", optional = true, path = "../../memory/rust" }
linear-algebra    = { version = "0.1.0", optional = true, path = "../../linear-algebra/rust" }
geometric-algebra = { version = "0.1.0", optional = true, path = "../../geometric-algebra/rust" }
calculus          = { version = "0.1.0", optional = true, path = "../../calculus/rust" }
probability       = { version = "0.1.0", optional = true, path = "../../probability/rust" }
kinematics        = { version = "0.1.0", optional = true, path = "../../kinematics/rust" }
kinetics          = { version = "0.1.0", optional = true, path = "../../kinetics/rust" }
dynamics          = { version = "0.1.0", optional = true, path = "../../dynamics/rust" }
graphs            = { version = "0.1.0", optional = true, path = "../../graphs/rust" }
neural-networks   = { version = "0.1.0", optional = true, path = "../../neural-networks/rust" }
control           = { version = "0.1.0", optional = true, path = "../../control/rust" }
robotics          = { version = "0.1.0", optional = true, path = "../../robotics/rust" }
